:bug: Fix issue with main content margin on mobile

--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -19,7 +19,7 @@ $text_color: white;
     margin-top: 30px;
     margin-bottom: 30px;
     @include media-breakpoint-down(sm){
-        margin-top: 0px;
+        margin-top: 16px;
     }
 }
 
